[package]
name = "rustcraft"
build = "src/build.rs"
authors = ["Chad Cotton <chad.cotton@outlook.com>"]
description = "Rust Minecraft Implementation"
readme = "./README.md"
rust-version = "1.67.1"
license = "MIT"
repository = "https://github.com/chadc1050/rustcraft"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "1.0.94"
glutin = "0.30.7"
winit = "0.28.3"
zip = "0.6.4"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
gl = "0.14.0"
png = { version = "0.17.6", optional = true }
cgmath = "0.18.0"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"
